ms-user-validation/deployment/user-validation-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: user-validation-deployment
spec:
  replicas: 5
  template:
    metadata:
      labels:
        app: user-validation
    spec:
      containers:
      - name: user-validation
        image: pengyue/ms-user-validation
        ports:
        - name: ms-uv-port
          containerPort: 80
