ms-user-validation/deployment/user-validation-ingress-controller.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: user-validation-lb-deployment
  labels:
    k8s-app: user-validation-lb-deployment
spec:
  replicas: 1
  template:
    metadata:
      name: user-validation-lb-deployment
      labels:
        k8s-app: user-validation-lb-deployment
    spec:
      containers:
      - image: gcr.io/google_containers/nginx-ingress-controller:0.8.3
        name: user-validation-lb-deployment
        readinessProbe:
          httpGet:
            path: /healthz
            port: 10254
            scheme: HTTP
        livenessProbe:
          httpGet:
            path: /healthz
            port: 10254
            scheme: HTTP
          initialDelaySeconds: 10
          timeoutSeconds: 1
        ports:
        - containerPort: 80
          hostPort: 80
        - containerPort: 443
          hostPort: 443
        args:
        - /nginx-ingress-controller
        - --default-backend-service=$(POD_NAMESPACE)/user-validation
---

apiVersion: v1
kind: Service
metadata:
  name: user-validation-lb-service
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    k8s-app: user-validation-lb-deployment
