ms-user-validation/deployment/user-validation-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: user-validation-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
  labels:
    k8s-app: user-validation-ingress
spec:
  rules:
  - host: user-validation.home
    http:
      paths:
      - path: /
        backend:
          serviceName: user-validation-lb-service
          servicePort: 30080
